Safari Bug "no-cache" network error https://bugs.webkit.org/show_bug.cgi?id=233916

Reviewed by Chris Dumez.

Source/WebCore:

Test: http/wpt/service-workers/cache-control-request.html

Remove Cache-Control header when going the service worker road if it is added by the network code path and not the application.

* loader/CrossOriginAccessControl.cpp:
(WebCore::httpHeadersToKeepFromCleaning):
(WebCore::cleanHTTPRequestHeadersForAccessControl):
* loader/CrossOriginAccessControl.h:
* platform/network/ResourceRequestBase.cpp:
(WebCore::ResourceRequestBase::removeHTTPHeaderField):
* platform/network/ResourceRequestBase.h:

LayoutTests:

* http/wpt/service-workers/cache-control-request-expected.txt: Added.
* http/wpt/service-workers/cache-control-request-worker.js: Added.
(async doTest):
* http/wpt/service-workers/cache-control-request.html: Added.
* http/wpt/service-workers/resources/cross-origin-allow.py: Added.
(main):



Canonical link: https://commits.webkit.org/244968@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286655 268f45cc-cd09-0410-ab3c-d52691b4dbfc