Source/WebCore/loader/CrossOriginAccessControl.h
@@ -67,7 +67,8 @@ enum class HTTPHeadersToKeepFromCleaning : uint8_t {
     Referer = 1 << 1,
     Origin = 1 << 2,
     UserAgent = 1 << 3,
-    AcceptEncoding = 1 << 4
+    AcceptEncoding = 1 << 4,
+    CacheControl = 1 << 5
 };
 
 OptionSet<HTTPHeadersToKeepFromCleaning> httpHeadersToKeepFromCleaning(const HTTPHeaderMap&);
@@ -102,7 +103,8 @@ template<> struct EnumTraits<WebCore::HTTPHeadersToKeepFromCleaning> {
         WebCore::HTTPHeadersToKeepFromCleaning::Referer,
         WebCore::HTTPHeadersToKeepFromCleaning::Origin,
         WebCore::HTTPHeadersToKeepFromCleaning::UserAgent,
-        WebCore::HTTPHeadersToKeepFromCleaning::AcceptEncoding
+        WebCore::HTTPHeadersToKeepFromCleaning::AcceptEncoding,
+        WebCore::HTTPHeadersToKeepFromCleaning::CacheControl
     >;
 };
 
